Add flexbox to philosophy part

--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
             <img src="Video 1.png"></img>
         </div>
 
+        <div class="philosophie">
+            <div class="left-column">
+                <h2>UNSERE <span>PHILOSOPHIE</span></h2>
+                <div class="text-box">
+                    <h3>Strategie</h3>
+                    <p>Stühlen Marketing & Communications entwickelt Strategien mit Weitblick! Als innovatives und kreatives Team sind wir immer am Puls der Zeit und spezialisiert auf die Erstellung Ihrer Corporate Identity und Ihrer Homepage, Guerillamarketing und Online-Kampagnen, Social Media und Content Marketing. Wir verlassen ausgetretene Pfade und beschreiten mit Ihnen neue Wege!</p>
+                </div>
+                <div class="text-box">
+                    <h3>Team</h3>
+                    <p>Wir sind ein eingespieltes und hochprofessionelles Team aus kreativen Marketing- und PR-Profis, Webdesignern, Online- und Social-Media-Experten sowie Video- und Fotospezialisten. Unsere Kunden aus Dienstleistung, Industrie, Handel und Handwerk nennen wir unsere Partner, weil wir nachhaltige Partnerschaften leben. Denn Partner vertrauen sich zu Recht.</p>
+                </div>
+            </div>
+            <img src="on the top 1.png">
+        </div>
+
 
     </main>
 </body>
